fix(release): Added flag to avoid java warn about restricted methods